--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Web AR with Online Model</title>
+    <meta charset="utf-8" />
+    <title>WebAR Test</title>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/ar.js@3.3.2/aframe/build/aframe-ar.min.js"></script>
     <style>
-      body { margin: 0; overflow: hidden; }
+      body, html { margin: 0; overflow: hidden; width: 100%; height: 100%; }
     </style>
   </head>
   <body>
     <a-scene embedded arjs>
-      <!-- Hiro marker to trigger AR content -->
+      <!-- Marker -->
       <a-marker preset="hiro">
-        <!-- Load model from online link -->
+        <!-- Online GLTF Model -->
         <a-entity 
           gltf-model="https://cdn.jsdelivr.net/gh/KhronosGroup/glTF-Sample-Models@master/2.0/Duck/glTF/Duck.gltf"
           scale="0.5 0.5 0.5"
           position="0 0 0">
         </a-entity>
       </a-marker>
-
       <a-entity camera></a-entity>
     </a-scene>
   </body>
