--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <div id="content">লোড হচ্ছে...</div>
 
   <script>
-    const path = window.location.pathname;
+    const path = window.location.pathname.replace('/ar', ''); // "/ar/house" → "/house"
     const proxyUrl = 'https://dom.growthjourney-bd.com/restaurant/leukapizza?' + path;
 
     fetch(proxyUrl)
       .then(res => {
-        if (!res.ok) throw new Error("Failed to load: " + res.status);
+        if (!res.ok) throw new Error("লোড করা যায়নি");
         return res.text();
       })
       .then(html => {
@@ -27,3 +27,4 @@
   </script>
 </body>
 </html>
+
